--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,11 @@ axi_to_axi_lite:
   variables:
     TEST_MODULE: axi_to_axi_lite
 
+axi_to_mem_banked:
+  <<: *test_module
+  variables:
+    TEST_MODULE: axi_to_mem_banked
+
 axi_xbar:
   <<: *test_module
   variables:
