--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,6 +96,11 @@ axi_lite_xbar:
   variables:
     TEST_MODULE: axi_lite_xbar
 
+axi_llc:
+  <<: *test_module
+  variables:
+    TEST_MODULE: axi_llc
+
 axi_modify_address:
   <<: *test_module
   variables:
